--- a/src/4-components/b1-buttons/b11-button-main/style.scss
+++ b/src/4-components/b1-buttons/b11-button-main/style.scss
@@ -10,6 +10,7 @@
 	justify-content: center;
 	line-height: $act-line-height__110;
 	margin: map-get($act-space, "desktop-1");
+	text-decoration: none;
 	outline: none;
 	width: fit-content;
 	&:only-child {
