--- a/src/_core/_typography.scss
+++ b/src/_core/_typography.scss
@@ -1,5 +1,12 @@
 /* Typography */
 
+.act-montserrat {
+	font-family: $montserrat;
+}
+.act-source-sans-pro {
+	font-family: $sourcesanspro;
+}
+
 /* H1 */
 h1,
 .act-h1 {
@@ -29,6 +36,7 @@ h2,
 	font-size: $act-font-size__desktop-h2;
 	font-weight: $act-font-weight__semibold;
 	line-height: $act-line-height__120;
+	margin-bottom: map-get($act-space, "desktop-2");
 	@include devices(mobile) {
 		font-size: $act-font-size__mobile-h2;
 	}
@@ -41,6 +49,7 @@ h3,
 	font-size: $act-font-size__desktop-h3;
 	font-weight: $act-font-weight__semibold;
 	line-height: $act-line-height__120;
+	margin-bottom: map-get($act-space, "desktop-1");
 	@include devices(mobile) {
 		font-size: $act-font-size__mobile-h3;
 	}
@@ -52,6 +61,7 @@ h4,
 	font-size: $act-font-size__desktop-h4;
 	font-weight: $act-font-weight__semibold;
 	line-height: $act-line-height__130;
+	margin-bottom: map-get($act-space, "desktop-1");
 	@include devices(mobile) {
 		font-size: $act-font-size__mobile-h4;
 	}
@@ -67,6 +77,7 @@ h5,
 	font-size: $act-font-size__desktop-h5;
 	font-weight: $act-font-weight__semibold;
 	line-height: $act-line-height__130;
+	margin-bottom: map-get($act-space, "desktop-1");
 	@include devices(mobile) {
 		font-size: $act-font-size__mobile-h5;
 	}
@@ -79,6 +90,7 @@ h6,
 	font-size: $act-font-size__desktop-h6;
 	font-weight: $act-font-weight__semibold;
 	line-height: $act-line-height__130;
+	margin-bottom: map-get($act-space, "desktop-1");
 	@include devices(mobile) {
 		font-size: $act-font-size__mobile-h6;
 	}
@@ -92,23 +104,45 @@ p,
 	font-size: $act-font-size__desktop-p;
 	font-weight: $act-font-weight__regular;
 	line-height: $act-line-height__150;
+	margin-bottom: map-get($act-space, "desktop-1");
 	&.bold,
 	&-bold {
+		font-family: $sourcesanspro;
 		font-weight: $act-font-weight__semibold;
 	}
 	&.white,
 	&-white {
+		font-family: $sourcesanspro;
 		color: $act-colour__white;
 	}
 	&.large,
 	&-large {
+		font-family: $sourcesanspro;
 		font-size: $act-font-size__desktop-p-large;
+	}
+	&.small,
+	&-small {
+		font-family: $sourcesanspro;
+		font-size: $act-font-size__desktop-p-small;
+	}
+	&.xsmall,
+	&-xsmall {
+		font-family: $sourcesanspro;
+		font-size: $act-font-size__desktop-p-xsmall;
 	}
 	@include devices(mobile) {
 		font-size: $act-font-size__mobile-p;
 		&.large,
 		&-large {
 			font-size: $act-font-size__mobile-p-large;
+		}
+		&.small,
+		&-small {
+			font-size: $act-font-size__desktop-p-small;
+		}
+		&.xsmall,
+		&-xsmall {
+			font-size: $act-font-size__desktop-p-xsmall;
 		}
 	}
 }
@@ -121,4 +155,8 @@ a,
 	font-size: inherit;
 	font-weight: inherit;
 	line-height: inherit;
+	.fa-arrow-up-right-from-square {
+		font-size: 80%;
+		margin-left: map-get($act-space, "desktop-0");
+	}
 }
