--- a/src/_core/radius.scss
+++ b/src/_core/radius.scss
@@ -1,1 +1,6 @@
 /* Border Radius Variables */
+
+$act-radius__desktop-0: 0px;
+$act-radius__desktop-4: 4px;
+$act-radius__desktop-16: 16px;
+$act-radius__desktop-full: 50%;
