--- a/src/_core/_flex.scss
+++ b/src/_core/_flex.scss
@@ -6,18 +6,8 @@
 	&-light-grey {
 		background-color: $act-colour__light-grey;
 		&-gradient {
-			background: linear-gradient(
-				180deg,
-				#dfdfdf 0%,
-				#e6e5e5 0.01%,
-				#f0f0f0 100%
-			);
-			background-color: linear-gradient(
-				180deg,
-				#dfdfdf 0%,
-				#e6e5e5 0.01%,
-				#f0f0f0 100%
-			);
+			background: linear-gradient(180deg, #dfdfdf 0%, #e6e5e5 0.01%, #f0f0f0 100%);
+			background-color: linear-gradient(180deg, #dfdfdf 0%, #e6e5e5 0.01%, #f0f0f0 100%);
 		}
 	}
 	&-purple {
