--- a/src/_core/colour.scss
+++ b/src/_core/colour.scss
@@ -6,6 +6,7 @@ $act-colour__green: #098660;
 $act-colour__grey: #777777;
 $act-colour__indigo: #311c6a;
 $act-colour__light-grey: #f6f6f6;
+$act-colour__light-purple: #f4f2fa;
 $act-colour__medium-purple: #9a78f2;
 $act-colour__middle-grey: #adadad;
 $act-colour__purple: #472d8c;
@@ -43,6 +44,7 @@ $act-colour: (
 	"health-dark-blue": $act-colour__health-dark-blue,
 	"health-light-blue": $act-colour__health-light-blue,
 	"light-grey": $act-colour__light-grey,
+	"light-purple": $act-colour__light-purple,
 	"middle-grey": $act-colour__middle-grey,
 	"purple": $act-colour__purple,
 	"red": $act-colour__red,
