--- a/src/4-components/c1-cards/style.scss
+++ b/src/4-components/c1-cards/style.scss
@@ -123,7 +123,7 @@
 		&:focus {
 			[class*="__container"] {
 				border-color: $act-colour__purple;
-				border-width: 2px;
+				border-width: 1px;
 			}
 		}
 		&:hover {
@@ -131,6 +131,7 @@
 			color: $act-colour__white;
 			[class*="__container"] {
 				border-color: $act-colour__purple;
+				border-width: 1px;
 			}
 			[class*="__icon"],
 			[class*="__cta"] {
@@ -228,9 +229,9 @@
 	&__homepage {
 		background-color: $act-colour__light-purple;
 		[class*="__container"] {
-			border-color: transparent;
-			border-width: 4px;
-			border-bottom: 4px solid $act-colour__purple;
+			border: none;
+			border-width: 0px;
+			box-shadow: inset 0 4px 0 0 $act-colour__light-purple,inset 4px 0 0 0 $act-colour__light-purple,inset -4px 0 0 0 $act-colour__light-purple, 0 4px 0 $act-colour__purple;
 		}
 		[class*="__image"] {
 			display: none;
@@ -259,7 +260,7 @@
 			background-color: $act-colour__purple;
 			color: $act-colour__white;
 			[class*="__container"] {
-				border-color: $act-colour__purple;
+				box-shadow: inset 0 4px 0 0 $act-colour__purple,inset 4px 0 0 0 $act-colour__purple,inset -4px 0 0 0 $act-colour__purple, 0 4px 0 $act-colour__purple;
 			}
 			[class*="__icon"],
 			[class*="__cta"] {
