--- a/src/_core/_flex.scss
+++ b/src/_core/_flex.scss
@@ -20,6 +20,9 @@
 			);
 		}
 	}
+	&-light-purple {
+		background-color: $act-colour__light-purple;
+	}
 	&-purple {
 		background-color: $act-colour__purple;
 		color: $act-colour__white;
