--- a/src/_core/colour.scss
+++ b/src/_core/colour.scss
@@ -1,4 +1,6 @@
-/* Colour Values */
+/* ACT Design System */
+/* Design Tokens *//* Colours */
+/* Reference: /?path=/docs/design-tokens-colours--page */
 
 /* Variables */
 $act-colour__black: #111111;
