--- a/src/_core/fonts.scss
+++ b/src/_core/fonts.scss
@@ -1,4 +1,6 @@
-/* Font Values */
+/* ACT Design System */
+/* Design Tokens *//* Fonts */
+/* Reference: /?path=/docs/design-tokens-typography--page */
 
 /* Import Montserrat & Source Sans Pro from Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");
