--- a/src/_core/radius.scss
+++ b/src/_core/radius.scss
@@ -1,4 +1,6 @@
-/* Border Radius Variables */
+/* ACT Design System */
+/* Design Tokens *//* Radius */
+/* Reference: /?path=/docs/design-tokens-radius--page */
 
 $act-radius__desktop-0: 0px;
 $act-radius__desktop-4: 4px;
