--- a/src/_core/shadow.scss
+++ b/src/_core/shadow.scss
@@ -1,7 +1,5 @@
-/* Box Shadow Variables */
+/* ACT Design System */
+/* Design Tokens *//* Shadows */
+/* Reference: /?path=/docs/design-tokens-shadows--page */
 
 $act-shadow__one: 0px 8px 20px rgba(0, 0, 0, 0.15);
-
-$act-colour: (
-	"one": $act-shadow__one,
-);
