--- a/.storybook/public/style/preview.scss
+++ b/.storybook/public/style/preview.scss
@@ -1,3 +1,5 @@
+/* ACT Design System */
+
 /* Design Token Import */
 @import "../../../src/_core/_tokens.scss";
 
@@ -217,7 +219,7 @@
 .act-img {
 	display: flex;
 	flex-direction: column;
-	margin: map-get($act-space, "desktop-5") 0px;
+	margin: map-get($act-space, "desktop-2") 0px;
 	img,
 	&__image {
 		border: 1px solid $act-colour__middle-grey;
