--- a/.storybook/public/style/preview.scss
+++ b/.storybook/public/style/preview.scss
@@ -177,6 +177,7 @@
 			* {
 				/* Remove border radius from colour swatches */
 				border-radius: 0px;
+				box-shadow: none;
 			}
 			.css-syxe49 {
 				/* Hide Title Row */
